# ChangeLog for media-sound/clementine
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  26 Dec 2010; Nikoli <nikoli@lavabit.com> -clementine-0.6-r1.ebuild,
  -clementine-0.6-r2.ebuild,
  -files/clementine-0.6-optional-dbus-devicekit.patch,
  -files/clementine-0.6-optional-liblastfm.patch:
  clementine-0.6 with both patches is in portage

  26 Dec 2010; Nikoli <nikoli@lavabit.com> clementine-0.6-r2.ebuild,
  files/clementine-0.6-optional-dbus-devicekit.patch,
  clementine-9999.ebuild, metadata.xml:
  upstream accepted dbus patch, removed other engines

*clementine-0.6-r2 (25 Dec 2010)

  25 Dec 2010; Nikoli <nikoli@lavabit.com> +clementine-0.6-r2.ebuild,
  +files/clementine-0.6-optional-dbus-devicekit.patch:
  make dbus and devicekit optional

*clementine-0.6-r1 (19 Dec 2010)

  19 Dec 2010; Nikoli <nikoli@lavabit.com> +clementine-0.6-r1.ebuild,
  +files/clementine-0.6-optional-liblastfm.patch, clementine-9999.ebuild,
  metadata.xml:
  optional liblastfm

  18 Dec 2010; Nikoli <nikoli@lavabit.com> -clementine-0.6_rc1.ebuild,
  -clementine-0.6.ebuild:
  0.6 is in portage

*clementine-0.6 (12 Dec 2010)

  12 Dec 2010; Nikoli <nikoli@lavabit.com> +clementine-0.6.ebuild:
  version bump

*clementine-0.6_rc1 (07 Dec 2010)

  07 Dec 2010; Nikoli <nikoli@lavabit.com> +clementine-0.6_rc1.ebuild,
  clementine-9999.ebuild, metadata.xml:
  version bump, update live ebuild

  17 Nov 2010; Nikoli <nikoli@lavabit.com> -clementine-0.4.2.ebuild,
  -clementine-0.5.3.ebuild, -files/clementine-0.5.3-automagic.patch,
  clementine-9999.ebuild, metadata.xml:
  update live ebuild, remove old

  30 Sep 2010; Nikoli <nikoli@lavabit.com> clementine-9999.ebuild:
  update live ebuild

*clementine-0.5.3 (30 Sep 2010)

  30 Sep 2010; Nikoli <nikoli@lavabit.com> -clementine-0.5.1.ebuild,
  -files/clementine-0.5.1_automagic.patch, +clementine-0.5.3.ebuild,
  +files/clementine-0.5.3-automagic.patch:
  version bump

*clementine-0.5.1 (21 Sep 2010)
