@@ -1,3 +1,3 @@
-EBUILD clementine-9999.ebuild 3135 RMD160 9446ea739becfd23f581b5f3445c24365168a4de SHA1 823e6ad9a54818954cb552c224b2fc066fcfa9d2 SHA256 e479e247f24b9c2aa791cabf273ec955a96313b1a50ebf84d4cf6ad1391741cb
-MISC ChangeLog 3174 RMD160 0a747a14e0ce01833ac8ff8ad71b88ab1b33e438 SHA1 090bcbc44b14b0786c1d0bdd3a7256284228e0ba SHA256 6224af906a1d040070da0adffce5c8d2655650abfb47e744886b8efcc3b98210
+EBUILD clementine-9999.ebuild 3614 RMD160 95172d0c16ce60554f11431490ead08da57bdaa1 SHA1 d55e558da8adce0fbf9655f2371082c6187c4a9d SHA256 39b8bf792db129d3eced0e089c0b12e28c0c1d8c762490279a11e4836c521663
+MISC ChangeLog 3267 RMD160 e329d64e6071430345527322537af5253a5eb6db SHA1 3cab54d88f26be29c1a1d45cede9de78fc6e2271 SHA256 c994e4d5f428bb50ef2340cba942b05fc6ae054b1bb89ce9c970195abad82661
 MISC metadata.xml 846 RMD160 efba04b7a71123cb465b1e75127a4797f2013054 SHA1 3d1c647414f3d0c4bf97b725bac4cea2cffeebca SHA256 6a27a34ca5039ac9471a4e40cb84f9ed4169074d6d3a8a94f926f188f5e1350a
