@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/clementine
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  09 Mar 2011; Nikoli <nikoli@lavabit.com> clementine-9999.ebuild:
+  update deps, add tests
 
   26 Dec 2010; Nikoli <nikoli@lavabit.com> -clementine-0.6-r1.ebuild,
   -clementine-0.6-r2.ebuild,
